# snake_env_fast

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
snake_env_fast/: __init__.py  _fastenv.pyi  gym_wrapper.py  play.py
snake_gym/: __init__.py  _fastenv.pyi  play.py  snake_gym.py
src/: bindings.cpp  env_core.cpp  env_core.hpp
tests/: test_gym_api.py  test_gym_vector_api.py  test_player_bot_collision.py  test_rendering_speed.py  utils.py
