[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "numpy>=1.22"]
build-backend = "scikit_build_core.build"

[project]
name = "snake-gym"
version = "0.0.1"
description = "Fast batched C++ snake env with Gymnasium wrapper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29",
    "matplotlib>=3.9.4",
    "opencv-python>=4.12.0.88",
    "pytest>=8.4.2",
]

[tool.scikit-build]
wheel.packages = ["snake_gym_core"]
cmake.version = ">=3.18"
